# vcxproj-stream-editor

./: .gitignore  README.md  pyproject.toml  vcxproj.py
.github/workflows/: ci.yml
