[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "vcxproj-stream-editor"
dynamic = ["version"]
description = "Rewrite Visual Studio .vcxproj files without spurious changes"
readme = "README.md"
requires-python = ">= 3.3"
keywords = ["Visual Studio", "MSBuild", "vcxproj", "project", "XML"]
authors = [
    {name = "Mark A. Tsuchida"},
    {name = "contributors"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]

[project.urls]
Repository = "https://github.com/marktsuchida/vcxproj-stream-editor"

[tool.setuptools_scm]
